tests/run/error_refinement_nested.out
error[refinement_violation]: refinement violated constructing 'Pos' (line 12)
  --> tests/run/error_refinement_nested.em:12:21 (in main)
